--- a/Tuples01/Tuples01.csproj
+++ b/Tuples01/Tuples01.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1DDE7A88-5B76-4145-98F5-26136FF6EF8F}</ProjectGuid>
+    <ProjectGuid>{452316C0-0898-45A0-87E5-97C6460D3FC4}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Pattern_Matching___00</RootNamespace>
-    <AssemblyName>Pattern Matching - 00</AssemblyName>
+    <RootNamespace>Tuples01</RootNamespace>
+    <AssemblyName>Tuples01</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
